<resources>
    <string name="app_name">Laboratorio-03</string>
    <string name="title_money_quantity">Cantidad de dinero</string>
    <string name="image_ten_cents_description">Ten Cents</string>
    <string name="image_five_cents_description">Five Cents</string>
    <string name="image_quarter_description">Twenty Five Cents</string>
    <string name="image_dollar_description">One Dollar</string>
    <string name="tv_five_cents">$0.05</string>
    <string name="tv_ten_cents">$0.10</string>
    <string name="tv_quarter">$0.25</string>
    <string name="tv_one_dollar">$1.00</string>
</resources>